# PaddleCustomDevice

.github/workflows/: metax_work.yaml  update_paddle_submodule.yml
backends/gcu/custom_engine/: gcu_engine_compiler.cc
backends/gcu/passes/: gcu_op_marker_pass.cc
backends/iluvatar_gpu/: CMakeLists.txt
backends/iluvatar_gpu/common/: cuda_flags.cc
backends/iluvatar_gpu/patches/: paddle-corex.patch
backends/intel_hpu/kernels/: hpu_funcs.h
backends/intel_hpu/runtime/: runtime.cc
backends/metax_gpu/: CMakeLists.txt  README.md  README_cn.md  build.sh
backends/metax_gpu/cmake/: cblas.cmake  generic.cmake  third_party.cmake
backends/metax_gpu/kernels/: flags_declare.cu  (+4 more)
backends/metax_gpu/tests/: CMakeLists.txt  default.txt  run_test.sh
backends/metax_gpu/tests/error_pytest/: test_activation_op.py  test_rms_norm_op_meatx.py  test_split_op_metax.py  test_stack_op.py
backends/metax_gpu/tests/unittest/: test_abs_metax.py  test_adamw_op_metax.py  test_arange_metax.py  test_cast_op_metax.py  test_clip_op_metax.py  test_compare_op_metax.py  test_concat_op_metax.py  test_elementwise_floordiv_op_metax.py  test_elementwise_mul_op_metax.py  test_elementwise_pow_op_metax.py  test_empty_op_metax.py  test_fill_any_op_metax.py  test_full_like_op_metax.py  test_fused_bias_act_op.py  test_gather_nd_op_metax.py  test_index_add_op_metax.py  test_one_hot_v2_op.py  test_pad_op_metax.py  test_reduce_op_metax.py  test_reshape_op_metax.py  test_sign_op_metax.py  test_subtract_op_metax.py  test_top_k_v2_op_metax.py  test_top_p_sampling.py  test_uniform_random_op_metax.py
(+177 files in other folders)
